# njit8021xclient

./: Documents.html  Documents2.html  Install.html  Makefile  Makefile.am  NCEPU20120828_h3cc_ForAR71xx  README.md  ReadMe.html  RefreshIP.py  RefreshIP.sh  auth.c  configure.ac  fillbase64.c  index.html  main.c  release-sh
gui/: failed.html  index.html
gui/cgi-bin/: .htaccess  login.cgi  test.cgi
patch/: SParray.h  _test  data.in  des.c  desKey.h  handleDES.c  handleDES.c.oldversion  readme.txt  test
src/: Makefile.am  Makefile.in  auth.c  config.c  configure.ac  main.c
src-gui/: Makefile.am  configure.ac  hello.c  hello.xml
src-gui/gtkgui/: Makefile.am  TODO  configure.ac  hello.c
src-gui/gtkgui/src/: Makefile.am
src/eap/: EAP.cbp  Makefile.in  configure.ac  eap_responser.mk  eap_responser_main.c  njit8021xclient.h
src/gtk/: Makefile.in  aclocal.m4  config.c  configure.ac  hello.c  hello.mk
src/gtk/po/: de.po  en.po  fr.po  it.po  ja.po  ko.po  pl.po  ru.po  zh_CN.po
src/luascripts/: helloworld.lua  lbase64test.lua
