AC_INIT([hello], [1.0])
AC_CONFIG_AUX_DIR([.])
AM_INIT_AUTOMAKE([-Wall -Werror foreign])
AC_PROG_CC
AM_PROG_CC_C_O
AM_PATH_GTK_2_0
AC_PROG_INTLTOOL 
ALL_LINGUAS="zh_CN" 
GETTEXT_PACKAGE="$PACKAGE" 
AC_SUBST(GETTEXT_PACKAGE) 
AM_GLIB_GNU_GETTEXT 
AM_GLIB_DEFINE_LOCALEDIR(LOCALEDIR) 
AC_CONFIG_HEADER([config.h])
AC_CONFIG_FILES([Makefile po/Makefile.in])
AC_OUTPUT

